style/format.css
/* Spanish-Rose: #882D6A; */
/* Green: #8FBF59; */

/* Animations */
@keyframes flyin {
	0% {
		opacity: 0.25;
		transform: scale(1.25);
		filter: blur(3px);
	}
  100% {
		filter: blur(0);
		transform: scale(1);
		opacity: 1;
  }
}

@keyframes appearUp {
	0% {
		filter: blur(3px);
		transform: translateY(40px);
		opacity: 0.0;
	}
	100% {
		filter: blur(0);
		transform: translateY(0);
		opacity: 1;
	}
}

@keyframes appearLeft {
	0% {
		filter: blur(3px);
		transform: translateX(-40px);
		opacity: 0.0;
	}
	100% {
		filter: blur(0);
		transform: translateX(0);
		opacity: 1;
	}
}

@keyframes appearRight {
	0% {
		filter: blur(3px);
		transform: translateX(40px);
		opacity: 0.0;
	}
	100% {
		filter: blur(0);
		transform: translateX(0);
		opacity: 1;
	}
}

@keyframes fadeIn {
	0% {
		transform: scale(0.2);
		opacity: 0.3;
	}
	100% {
		transform: scale(1);
		opacity: 1;
	}
}

@keyframes slideLeft {
	0% {
		transform: translateX(-150%);
	}
	100% {
		transform: translateX(0);
	}
}

/* General Settings */
@font-face {
	font-family: 'Josefin-Sans';
	src: url('../font/JosefinSans-Light.eot?#iefix') format('embedded-opentype');
	src: url('../font/JosefinSans-Light.ttf') format("truetype");
	src: url('../font/JosefinSans-Light.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Josefin-Sans';
	src: url('../font/JosefinSans-Regular.eot?#iefix') format('embedded-opentype');
	src: url('../font/JosefinSans-Regular.ttf') format("truetype");
	src: url('../font/JosefinSans-Regular.woff') format('woff');
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: 'Annabelle';
	src: url('../font/Annabelle.eot?#iefix') format('embedded-opentype');
	src: url('../font/Annabelle.ttf') format("truetype");
	src: url('../font/Annabelle.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}


* {
	margin: 0;
	padding: 0;
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	   		box-sizing: border-box;
	font-family: 'Josefin-Sans', sans-serif;
}

html, body {
	height: 100%;
}


a {
	text-decoration: none;
	font-family: 'Josefin Sans';
}

a:link {
	color: gray;
	transition: color 0.3s;
}

a:visited {
	color: gray;
}

a:hover {
	color: #8FBF59;
	transition: color 0.3s;
}

a:active {
	color: black;
}

/* Premade classes for content layout purposes */
.page {
	position: relative;
	min-height: 100%;
	width: 100%;
	margin: 0 auto;
}

.content {
	overflow: auto;
}

.footer {
	border: dashed 2px #882D6A;
	font-size: 20px;
	text-align: center;

	height: 50px;
	width: 100%;
	padding: 10px 10px 10px 10px;
	margin: 1em 1px 1px 1px;
}

#imp {
	display: none;
}

/* ==============================================
   Navigation element, default browser experience
   ==============================================*/

@media screen and (max-width: 349px) {
	.bar h1 {
		color: #666;
		font-family: 'Annabelle';
		font-size: 23px;
		margin-top: 20px;
		margin-left: 40px;
		text-align: center;
	}
}

@media screen and (min-width: 350px) {
		.bar h1 {
			color: #666;
			font-family: 'Annabelle';
			font-size: 29px;
			margin-top: 17px;
			margin-left: 35px;
			text-align: center;
		}
}

/* small screens */
@media screen and (min-width: 1px) and (max-width: 899px) {
	.content {
		margin-top: 60px;
	}

	#imp {
		display: block;
	}

	.bar {
		display: block;
		background-color: #FFF;
		z-index: 499;

		box-shadow: 2px 2px 4px gray;

		position: fixed;
		left: -10px;
		width: 105%;
	  height: 62px;

		-moz-transition: all 200ms ease-in;
		-webkit-transition: all 200ms ease-in;
		-o-transition: all 200ms ease-in;
		transition: all 200ms ease-in;
	}

	.page {
		overflow: hidden;
	}

	.content {
    -moz-transition:all 200ms ease-in;
    -webkit-transition:all 200ms ease-in;
    -o-transition:all 200ms ease-in;
    transition:all 200ms ease-in;
	}

	.footer {
		-moz-transition: all 200ms ease-in;
		-webkit-transition: all 200ms ease-in;
		-o-transition: all 200ms ease-in;
		transition: all 200ms ease-in;
	}

	nav img {
		display: none;
	}

	nav a:link {
		color: gray;
		transition: color 0.3s;
	}

	nav a:visited {
		color: gray;
	}

	nav a:hover {
		color: #8FBF59;
		transition: color 0.3s;
	}

	nav {
		filter: blur(5px);
		opacity: 0;

	  position:fixed;
	  top:0;
	  left:0;
	  width:250px;
	  height:100%;
	  margin:0 0 0 -250px;
	  -moz-transition:all 200ms ease-in;
	  -webkit-transition:all 200ms ease-in;
	  -o-transition:all 200ms ease-in;
	  transition:all 200ms ease-in;
	}

	nav ul {
	  width:250px;
	  height:100%;
	  padding:0;
	  margin:0;
	  list-style:none;
	  background-color: #FBFBFB;
	  overflow:hidden;

		border-right: 2px solid #882D6A;
	}

	nav li {
	  margin:0;
	}

	nav a {
	  color:#fff;
	  font-size:15pt;
	  text-decoration:none;
	  display:block;
	  padding:12px 15px;
	  border-bottom: 2px dashed #882D6A;
	}

	nav .active {
		background-color: #DDD;
	}

	nav a:hover {
	  background: #DDD;
	}

	label {
	  display: block;
	  background: #8FBF59;
	  color: #fff;
		z-index: 500;

		font-family: 'helvetica neue', helvetica, arial, sans-serif;
	  font-weight: 700;
	  text-align: center;
	  font-size: 2em;
	  line-height: 1.3em;

		position: fixed;
	  top: 10px;
	  left: 10px;
		width: 42px;
	  height: 42px;

	  -moz-transition: all 200ms ease-in;
	  -webkit-transition: all 200ms ease-in;
	  -o-transition: all 200ms ease-in;
	  transition: all 200ms ease-in;
	}

	input[type="checkbox"] {
	  display:none;
	}

	input[type="checkbox"]:checked ~ nav {
	  margin:0;
		filter:blur(0px);
		opacity:1;
	}

	input[type="checkbox"]:checked ~ label {
	  left:260px;
	}

	input[type="checkbox"]:checked ~ .bar {
		-webkit-transform:translate3d(260px, 0, 0);
	  -moz-transform:translate3d(260px, 0, 0);
	  -o-transform:translate3d(260px, 0, 0);
	  transform:translate3d(260px, 0, 0);
	}

	input[type="checkbox"]:checked ~ .content {
	  -webkit-transform:translate3d(260px, 0, 0);
	  -moz-transform:translate3d(260px, 0, 0);
	  -o-transform:translate3d(260px, 0, 0);
	  transform:translate3d(260px, 0, 0);
	}

	input[type="checkbox"]:checked ~ .footer {
		-webkit-transform:translate3d(250px, 0, 0);
		-moz-transform:translate3d(250px, 0, 0);
		-o-transform:translate3d(250px, 0, 0);
		transform:translate3d(250px, 0, 0);
	}
}


/* medium screens */
@media screen and (min-width: 900px) and (max-width: 1299px) {
	input {
		display: none;
	}

	label {
		display: none;
	}

	.bar {
		display: none;
	}

	nav {
		overflow: auto;
		text-align: center;

		border-bottom-width: 5px;
		border-bottom-color: #882D6A;
		border-bottom-style: solid;
	}

	nav img {
		max-width: 15%;
		min-width: 150px;
		min-height: 75px;
		height: auto;
		width: auto\9;	/*i8 fix*/
		margin: 0 auto;
 	}

	nav ul {
		padding-top: 10px;
		padding-bottom: 10px;
		overflow: auto;

		border-top-width: 5px;
		border-top-color: #882D6A;
		border-top-style: solid;
	}

	nav li {
		display: inline-block;
		margin: 0px 5px 0px 5px;

		list-style: none;
		font-size: 13.5pt;
		line-height: 14pt;
 	}
}

/* large screens */
@media screen and (min-width: 1300px) {
	input {
		display: none;
	}

	label {
		display: none;
	}

	.bar {
		display: none;
	}

	nav {
		overflow: auto;
		margin-top: 10px;
		margin-left: auto;
		margin-right: auto;
		width: 1300px;
	}

	nav img {
		width: 200px;
		height: 110px;
		float: left;
	}

	nav ul {
		text-align: center;
		display: inline;

		margin-left: 15px;
		padding-top: 57px;
		float: left;
		width: 1070px;

		border-bottom-width: 0.4cm;
		border-bottom-style: solid;
		border-color: #882D6A;
	}

	nav li {
		display: inline;
		margin-left: 20px;
		font-size: 16pt;
		line-height: 24pt;
	}
}

